# project_klink

./: .gitignore  .gitprofile  Cargo.toml  Dockerfile  diesel.toml  setupgit.sh
.github/workflows/: rust-tests.yml
migrations/2025-01-06-073723_create_vehicles/: up.sql
migrations/2025-01-09-145116_passengers/: down.sql  up.sql
src/: error.rs  main.rs  routes.rs  schema.rs
src/config/: env.rs
src/entities/: metadata.rs  mod.rs  passengers.rs  raw_vehicle.rs  vehicle.rs
src/guards/: user_agent.rs
src/handlers/: common.rs  error.rs  mod.rs  passengers.rs  vehicles.rs
src/logics/: mocks.rs  mod.rs  passengers.rs
src/middlewares/: mod.rs  request_id.rs  ua_check.rs
src/services/: failing_service.rs  mod.rs  passenger_service.rs  vehicle_service.rs
src/utils/: crypto.rs  logger.rs  mod.rs
src/utils/serializers/: mod.rs
