[package]
name = "klink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres"] }
